# near-certification-tools

./: Cargo.toml  README.md  deploy.sh  dev_deploy.sh  init_args.json
api/: .env.development  Cargo.toml  README.md
api/cert/: Cargo.toml
api/cert/src/: db.rs  lib.rs  query.rs
api/common/: Cargo.toml
api/common/src/: lib.rs
api/errors/: Cargo.toml
api/errors/src/: lib.rs
api/invalidate-all-certs-for-account/: Cargo.toml  sample_api_payload_invalidate-all-certs-for-account.json
api/invalidate-all-certs-for-account/src/: lib.rs
api/invalidate-cert/: Cargo.toml
api/invalidate-cert/src/: lib.rs
api/mint-cert/: Cargo.toml  sample_api_payload_mint-cert.json
api/mint-cert/src/: lib.rs
api/near-certification-tools/: Cargo.toml  dev_deploy.sh  getCliCommands.js
api/near-certification-tools/src/: event.rs  lib.rs  utils.rs
api/near-certification-tools/src/contract/: invalidate.rs  mint.rs  nft.rs
api/router/: Cargo.toml
api/router/src/: lib.rs  main.rs
data-contract/: .gitignore  Cargo.toml  README.md  getCliCommands.js  init_args.json  sample_mint.json
data-contract/src/: contract.rs  event.rs  lib.rs  metadata.rs  storage_key.rs  utils.rs
data-contract/src/contract/: init.rs  invalidate.rs  mint.rs  nft.rs  permissions.rs
documentation/: batch-issuing.md  certificate-minting-make-scenario.json
src/: contract.rs  event.rs  lib.rs  metadata.rs  storage_key.rs  utils.rs
src/contract/: decertify.rs  init.rs  invalidate.rs  mint.rs  nft.rs
view-contract/: README.md  as-pect.config.js  asconfig.json  package-lock.json  package.json  tsconfig.json
view-contract/src/: NftTokenArgs.ts  StorageKey.ts  index.ts  metadata.ts  tsconfig.json  utils.ts
view-contract/src/__tests__/: main.spec.ts
web-app/: .env  .env.development  .env.local.example  .eslintignore  .eslintrc.js  README.md  deployment_notes.md  env.local.example  jest.config.js  next.config.js  package-lock.json  package.json  singleton.ts  tailwind.config.js
web-app/__tests__/: create-user.bak  test-query.test.ts  test-query.ts
web-app/components/: ExpirationWarning.tsx  ExplorerAccountLink.tsx  Footer.tsx  FooterSocials.tsx  Header.tsx  Layout.tsx
web-app/helpers/: caching.ts  certificate-designs.ts  certificate.ts  expiration-date.ts  expiration-query.ts  near.ts  prisma.ts  sample_mint.json  strings.ts  time.ts  types.ts
web-app/pages/: 404.tsx  _app.tsx  _middleware.ts  index.tsx
web-app/pages/account/: [account].tsx
web-app/pages/api/: invalidate-all-certs-for-account.ts  mint-cert.ts  replate-all-test.ts  sample_api_payload.json  sample_api_payload_invalidate-all-certs-for-account.json  sample_api_payload_mint-cert.json
web-app/pages/api/cert/: [imageFileName].ts
web-app/pages/certificate/: [tokenId].tsx
web-app/pages/certificates/: [account].tsx
web-app/prisma/: cert-functions.ts  mock-client.ts  schema.prisma  seed.ts  test-schema.prisma
web-app/prisma/migrations/20220303123803_postgres_init/: migration.sql
web-app/prisma/migrations/20220422082024_postgres_init/: migration.sql
web-app/prisma/test-helpers/: expiration.ts  query.ts  test-query.ts
web-app/prisma/test-setup/: cert-query-functions.ts
web-app/styles/: Account.module.scss  Home.module.scss  Layout.module.scss  globals.scss
web-app/synth/: account_names.json  action_receipts.json  receipt_ids.json  receipts.json  timestamps.json
web-app/synth/test_db/: action_receipts.json  receipts.json  receipts.json.bak
web-app/test/__tests__/: expiration-date.test.ts
web-app/test/test-helpers/: generate-account-activities.ts  mock-client.ts  query.ts  time.ts
