[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.0", features = ["macros"] }
dotenvy = "0.15.6"
errors = { version = "0.1.0", path = "../errors" }
near-certification-tools = { version = "0.1.0", path = "../near-certification-tools" }
near-crypto = "0.15.0"
near-jsonrpc-client = "0.4.1"
near-jsonrpc-primitives = "0.15.0"
near-primitives = "0.15.0"
serde = "1.0.147"
serde_json = "1.0.89"
