[package]
name = "errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = "0.6.0"
near-primitives = "0.15.0"
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.37"
