[package]
name = "invalidate-all-certs-for-account"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.0", features = ["macros"] }
common = { version = "0.1.0", path = "../common" }
errors = { version = "0.1.0", path = "../errors" }
near-primitives = "0.15.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
